--- a/jupyterlite_final_assignment.ipynb
+++ b/jupyterlite_final_assignment.ipynb
@@ -109,9 +109,8 @@
       "source": [
         "## Author\n",
         "\n",
-        "Author: Your Name Here\n",
-        "\n",
-        "Replace \"Your Name Here\" with your real name before sharing.\n"
+        "Author: Usama odho\n",
+      
       ]
     },
     {
